implemen matrix multiplication

--- a/lstd_mu_mountain_car.ipynb
+++ b/lstd_mu_mountain_car.ipynb
@@ -192,6 +192,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dhfromkorea/.local/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
+   "source": [
+    "import baselines\n",
+    "from baselines import deepq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = deepq.models.mlp([64], layer_norm=True)\n",
+    "act = deepq.learn(\n",
+    "    env,\n",
+    "    q_func=model,\n",
+    "    lr=1e-3,\n",
+    "    max_timesteps=100000,\n",
+    "    buffer_size=50000,\n",
+    "    exploration_fraction=0.25,\n",
+    "    exploration_final_eps=0.25,\n",
+    "    print_freq=10,\n",
+    "    param_noise=True\n",
+    ")\n",
+    "print(\"Saving model to mountaincar_model.pkl\")\n",
+    "act.save(\"mountaincar_model.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1024,6 +1065,10 @@
    "source": [
     "## what's done\n",
     "- batch-mode, continuous-state apprenticeship learning implemented\n",
+    "- increase gamma (check the sensitivity to gamma) eps = gamma^n\n",
+    "- check for (Q(s_terminal, a) or v(s_terminal) makes sense compared to V_mc)\n",
+    "- remove batch setting and see if it works\n",
+    "\n",
     "\n",
     "## problem\n",
     "- [v] value margin converges\n",
@@ -1044,6 +1089,7 @@
     "\n",
     "## next step\n",
     "- check apprenticeship learning works without batch-mode? (with MC simulation, we can reason in isolation)\n",
+    "- separately test each moving piece (LSPI, lstd-mu)\n",
     "- use slack term to see if suboptimality is the culprit.\n",
     "- batchmode maximum margin planning is trivial to add\n",
     "- need to integrate with sespsis (before the codebase diverges)\n",
