add todo for dqn

--- a/notebook/dqn_demo.ipynb
+++ b/notebook/dqn_demo.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -38,13 +29,12 @@
     "from algo.fa import LinearQ3\n",
     "\n",
     "from logger import *\n",
-    "setup_logging(default_level=logging.INFO)\n",
-    "\n"
+    "setup_logging(default_level=logging.INFO)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +163,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "if DQN_ONLINE:\n",
     "    # Enabling layer_norm here is import for parameter space noise!\n",
     "    sess = tf.InteractiveSession()\n",
