--- a/reinforcement_q_learning.ipynb
+++ b/reinforcement_q_learning.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline"
@@ -16,67 +14,17 @@
    "metadata": {},
    "source": [
     "\n",
-    "Reinforcement Learning (DQN) tutorial\n",
+    "Reinforcement Learning DQN PytTorch - Mountaincar\n",
     "=====================================\n",
-    "**Author**: `Adam Paszke <https://github.com/apaszke>`_\n",
     "\n",
-    "\n",
-    "This tutorial shows how to use PyTorch to train a Deep Q Learning (DQN) agent\n",
-    "on the CartPole-v0 task from the `OpenAI Gym <https://gym.openai.com/>`__.\n",
-    "\n",
-    "**Task**\n",
-    "\n",
-    "The agent has to decide between two actions - moving the cart left or\n",
-    "right - so that the pole attached to it stays upright. You can find an\n",
-    "official leaderboard with various algorithms and visualizations at the\n",
-    "`Gym website <https://gym.openai.com/envs/CartPole-v0>`__.\n",
-    "\n",
-    ".. figure:: /_static/img/cartpole.gif\n",
-    "   :alt: cartpole\n",
-    "\n",
-    "   cartpole\n",
-    "\n",
-    "As the agent observes the current state of the environment and chooses\n",
-    "an action, the environment *transitions* to a new state, and also\n",
-    "returns a reward that indicates the consequences of the action. In this\n",
-    "task, the environment terminates if the pole falls over too far.\n",
-    "\n",
-    "The CartPole task is designed so that the inputs to the agent are 4 real\n",
-    "values representing the environment state (position, velocity, etc.).\n",
-    "However, neural networks can solve the task purely by looking at the\n",
-    "scene, so we'll use a patch of the screen centered on the cart as an\n",
-    "input. Because of this, our results aren't directly comparable to the\n",
-    "ones from the official leaderboard - our task is much harder.\n",
-    "Unfortunately this does slow down the training, because we have to\n",
-    "render all the frames.\n",
-    "\n",
-    "Strictly speaking, we will present the state as the difference between\n",
-    "the current screen patch and the previous one. This will allow the agent\n",
-    "to take the velocity of the pole into account from one image.\n",
-    "\n",
-    "**Packages**\n",
-    "\n",
-    "\n",
-    "First, let's import needed packages. Firstly, we need\n",
-    "`gym <https://gym.openai.com/docs>`__ for the environment\n",
-    "(Install using `pip install gym`).\n",
-    "We'll also use the following from PyTorch:\n",
-    "\n",
-    "-  neural networks (``torch.nn``)\n",
-    "-  optimization (``torch.optim``)\n",
-    "-  automatic differentiation (``torch.autograd``)\n",
-    "-  utilities for vision tasks (``torchvision`` - `a separate\n",
-    "   package <https://github.com/pytorch/vision>`__).\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -129,13 +77,7 @@
     "Replay Memory\n",
     "-------------\n",
     "\n",
-    "We'll be using experience replay memory for training our DQN. It stores\n",
-    "the transitions that the agent observes, allowing us to reuse this data\n",
-    "later. By sampling from it randomly, the transitions that build up a\n",
-    "batch are decorrelated. It has been shown that this greatly stabilizes\n",
-    "and improves the DQN training procedure.\n",
-    "\n",
-    "For this, we're going to need two classses:\n",
+    "or this, we're going to need two classses:\n",
     "\n",
     "-  ``Transition`` - a named tuple representing a single transition in\n",
     "   our environment\n",
@@ -148,10 +90,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "Transition = namedtuple('Transition',\n",
@@ -183,94 +123,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's define our model. But first, let quickly recap what a DQN is.\n",
-    "\n",
     "DQN algorithm\n",
     "-------------\n",
-    "\n",
-    "Our environment is deterministic, so all equations presented here are\n",
-    "also formulated deterministically for the sake of simplicity. In the\n",
-    "reinforcement learning literature, they would also contain expectations\n",
-    "over stochastic transitions in the environment.\n",
-    "\n",
-    "Our aim will be to train a policy that tries to maximize the discounted,\n",
-    "cumulative reward\n",
-    "$R_{t_0} = \\sum_{t=t_0}^{\\infty} \\gamma^{t - t_0} r_t$, where\n",
-    "$R_{t_0}$ is also known as the *return*. The discount,\n",
-    "$\\gamma$, should be a constant between $0$ and $1$\n",
-    "that ensures the sum converges. It makes rewards from the uncertain far\n",
-    "future less important for our agent than the ones in the near future\n",
-    "that it can be fairly confident about.\n",
-    "\n",
-    "The main idea behind Q-learning is that if we had a function\n",
-    "$Q^*: State \\times Action \\rightarrow \\mathbb{R}$, that could tell\n",
-    "us what our return would be, if we were to take an action in a given\n",
-    "state, then we could easily construct a policy that maximizes our\n",
-    "rewards:\n",
-    "\n",
-    "\\begin{align}\\pi^*(s) = \\arg\\!\\max_a \\ Q^*(s, a)\\end{align}\n",
-    "\n",
-    "However, we don't know everything about the world, so we don't have\n",
-    "access to $Q^*$. But, since neural networks are universal function\n",
-    "approximators, we can simply create one and train it to resemble\n",
-    "$Q^*$.\n",
-    "\n",
-    "For our training update rule, we'll use a fact that every $Q$\n",
-    "function for some policy obeys the Bellman equation:\n",
-    "\n",
-    "\\begin{align}Q^{\\pi}(s, a) = r + \\gamma Q^{\\pi}(s', \\pi(s'))\\end{align}\n",
-    "\n",
-    "The difference between the two sides of the equality is known as the\n",
-    "temporal difference error, $\\delta$:\n",
-    "\n",
-    "\\begin{align}\\delta = Q(s, a) - (r + \\gamma \\max_a Q(s', a))\\end{align}\n",
-    "\n",
-    "To minimise this error, we will use the `Huber\n",
-    "loss <https://en.wikipedia.org/wiki/Huber_loss>`__. The Huber loss acts\n",
-    "like the mean squared error when the error is small, but like the mean\n",
-    "absolute error when the error is large - this makes it more robust to\n",
-    "outliers when the estimates of $Q$ are very noisy. We calculate\n",
-    "this over a batch of transitions, $B$, sampled from the replay\n",
-    "memory:\n",
-    "\n",
-    "\\begin{align}\\mathcal{L} = \\frac{1}{|B|}\\sum_{(s, a, s', r) \\ \\in \\ B} \\mathcal{L}(\\delta)\\end{align}\n",
-    "\n",
-    "\\begin{align}\\text{where} \\quad \\mathcal{L}(\\delta) = \\begin{cases}\n",
-    "     \\frac{1}{2}{\\delta^2}  & \\text{for } |\\delta| \\le 1, \\\\\n",
-    "     |\\delta| - \\frac{1}{2} & \\text{otherwise.}\n",
-    "   \\end{cases}\\end{align}\n",
-    "\n",
-    "Q-network\n",
-    "^^^^^^^^^\n",
-    "\n",
-    "Our model will be a convolutional neural network that takes in the\n",
-    "difference between the current and previous screen patches. It has two\n",
-    "outputs, representing $Q(s, \\mathrm{left})$ and\n",
-    "$Q(s, \\mathrm{right})$ (where $s$ is the input to the\n",
-    "network). In effect, the network is trying to predict the *quality* of\n",
-    "taking each action given the current input.\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class DQN(nn.Module):\n",
     "\n",
     "    def __init__(self, state_dim, num_actions):\n",
     "        super(DQN, self).__init__()\n",
-    "        self.fc1 = nn.Linear(state_dim, 64)\n",
-    "        self.fc2 = nn.Linear(64, num_actions)\n",
+    "        self.fc1 = nn.Linear(state_dim, 150)\n",
+    "        self.fc2 = nn.Linear(150, 75)\n",
+    "        self.fc3 = nn.Linear(75, num_actions)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = F.relu(self.fc2(x))\n",
+    "        x = F.relu(self.fc3(x))\n",
     "        \n",
     "        # Return Q values\n",
     "        return x # num_actions, gives the Q value for each\n",
@@ -311,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,10 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "BATCH_SIZE = 12\n",
@@ -343,15 +217,13 @@
     "    target_net = target_net.cuda()\n",
     "\n",
     "optimizer = optim.RMSprop(policy_net.parameters(), lr=0.01)\n",
-    "memory = ReplayMemory(20000) # 13361 willl be used according to my tets"
+    "memory = ReplayMemory(200000) # 13361 willl be used according to my tets"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 295,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#### Not being used here. These are for a stochastic setup\n",
@@ -385,7 +257,7 @@
     "Training loop\n",
     "^^^^^^^^^^^^^\n",
     "\n",
-    "Finally, the code for training our model.\n",
+    "\n",
     "\n",
     "Here, you can find an ``optimize_model`` function that performs a\n",
     "single step of the optimization. It first samples a batch, concatenates\n",
@@ -403,10 +275,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_terminal(state):\n",
+    "    #Terminal position is 0.5\n",
+    "    return state[0] >= 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def optimize_model():\n",
@@ -424,12 +305,12 @@
     "    batch = Transition(*zip(*transitions))\n",
     "\n",
     "    # Compute a mask of non-final states and concatenate the batch elements\n",
-    "    non_final_mask = ByteTensor(tuple(map(lambda s: s is not None,\n",
+    "    non_final_mask = ByteTensor(tuple(map(lambda s: not is_terminal(s),\n",
     "                                          batch.next_state)))\n",
     "\n",
     "    # Select all s' that are not final\n",
     "    non_final_next_states = Variable(torch.cat([FloatTensor(s) for s in batch.next_state\n",
-    "                                                if s is not None]),\n",
+    "                                                if not is_terminal(s)]),\n",
     "                                     volatile=True)\n",
     "    \n",
     "    state_batch = Variable(torch.cat([FloatTensor(s) for s in batch.state]))\n",
@@ -477,28 +358,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below, you can find the main training loop. At the beginning we reset\n",
-    "the environment and initialize the ``state`` variable. Then, we sample\n",
-    "an action, execute it, observe the next screen and the reward (always\n",
-    "1), and optimize our model once. When the episode ends (our model\n",
-    "fails), we restart the loop.\n",
-    "\n",
-    "Below, `num_episodes` is set small. You should download\n",
-    "the notebook and run lot more epsiodes.\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Collect off-policy samples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,23 +434,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trajs_for_dqn = sim.simulate(pi4, n_trial=1, n_episode=100)"
+    "trajs_for_dqn = sim.simulate(pi4, n_trial=1, n_episode=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dimensions of trajs_for_dqn = 100 x ~162\n"
+      "dimensions of trajs_for_dqn = 1000 x ~167\n"
      ]
     }
    ],
@@ -595,14 +460,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of transitions in trajs_for_dqn = 13361\n"
+      "number of transitions in trajs_for_dqn = 129291\n"
      ]
     }
    ],
@@ -615,19 +480,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "example transition: Transition(s=array([-0.51256768,  0.        ]), a=0, r=-1.0, s_next=array([-0.51365039, -0.00108272]), done=False)\n"
+      "example transition: Transition(s=array([-0.49995943,  0.        ]), a=0, r=-1.0, s_next=array([-0.50113658, -0.00117715]), done=False)\n"
      ]
     }
    ],
    "source": [
-    "print(\"example transition: {0}\".format(trajs_for_dqn[0][0]))"
+    "print(\"example transition: {0}\".format(trajs_for_dqn[0][0]))\n",
+    "terminal_position = 0.5"
    ]
   },
   {
@@ -646,43 +512,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "for episode in trajs_for_dqn:\n",
-    "    for transition in episode:\n",
-    "        # Store the transition in memory\n",
-    "        memory.push(transition.s, transition.a, transition.s_next, transition.r)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loss = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 306,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 306,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "3 % 1"
+    "    for transition in episode:        \n",
+    "        # Store the transition in memory        \n",
+    "        memory.push(transition.s, transition.a, transition.s_next, transition.r)\n"
    ]
   },
   {
@@ -129950,9 +129787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "num_episodes = 50\n",
