--- a/notebook/batch_IRL_v0.ipynb
+++ b/notebook/batch_IRL_v0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
     "from algo.lstd import LSTDQ, LSTDMu, LSPI\n",
     "from algo.policy import RandomPolicy2, LinearQ2\n",
     "from algo.fa import LinearQ3\n",
-    "from algo.apprenticeship_learning import ApprenticeshipLearning as AL\n",
+    "from algo.apprenticeship_learning import BatchApprenticeshipLearning as BAL\n",
     "from env.simulator import * \n",
     "from util.plotting import *\n",
     "from util.basis import *\n"
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,10 +176,18 @@
     "add_bias = True\n",
     "standardized = True\n",
     "p_gaus = (n_component**2 + int(add_bias)) * n_action\n",
+    "q_gaus = (n_component**2 + int(add_bias)) * n_action\n",
     "\n",
     "# IMPORANT\n",
     "states_in_D = np.vstack(D_mat[:, 0])\n",
-    "phi_gaus = GaussianKernel(states_in_D, n_action, p_gaus, n_component, include_action, add_bias, standardized).transform"
+    "phi_gaus = GaussianKernel(states_in_D, n_action, p_gaus, n_component, include_action, add_bias, standardized).transform\n",
+    "psi_gaus = phi_gaus\n",
+    "\n",
+    "# IMPORTANT: choose which basis function to use\n",
+    "phi = phi_gaus\n",
+    "p = p_gaus\n",
+    "psi = psi_gaus\n",
+    "q = q_gaus"
    ]
   },
   {
@@ -258,9 +266,6 @@
     }
    ],
    "source": [
-    "phi = phi_gaus\n",
-    "p = p_gaus\n",
-    "\n",
     "mdp_solver = LinearQ3(env=env,\n",
     "                      phi=phi,\n",
     "                      p=p,\n",
@@ -286,6 +291,108 @@
     "- [ ] implement MMP\n",
     "- dillemma ..."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this is specific to mountaincar-v0\n",
+    "# hard-coded so we fix s_0\n",
+    "init_s_sampler = lambda : np.array([-0.5, 0.0])\n",
+    "\n",
+    "# 2. define hyperparams\n",
+    "n_trial = 2\n",
+    "n_iteration = 10\n",
+    "# @note: hard-coded\n",
+    "# this's gotta be sufficiently large to avoid mc variance issue\n",
+    "sample_size_mc = 10**2\n",
+    "\n",
+    "precision = 0.1\n",
+    "use_slack = False\n",
+    "# @note: reward may have to be scaled to work with slack penalty\n",
+    "slack_penalty = 1e-3\n",
+    "# to help with invertibility of A in LSTD\n",
+    "#eps = 0.00001\n",
+    "eps = 0\n",
+    "\n",
+    "# this should be larger to account if init states vary\n",
+    "mu_sample_size = 100\n",
+    "\n",
+    "pi_exp = pi_expert\n",
+    "# for now we dont have D ~ pi_exp\n",
+    "# @todo: change this...\n",
+    "\n",
+    "mu_mc_list = estimate_mu_mc(env, pi_exp, phi, gamma, sample_size_mc)\n",
+    "mu_exp = np.mean(mu_mc_list, axis=0)\n",
+    "\n",
+    "pi_init = pi_random\n",
+    "\n",
+    "mdp_solver = None\n",
+    "\n",
+    "bal = BAL(pi_init=pi_init,\n",
+    "          D=D,\n",
+    "          action_list=action_list,\n",
+    "          p=p,\n",
+    "          q=q,\n",
+    "          phi=phi,\n",
+    "          psi=psi,\n",
+    "          gamma=gamma,\n",
+    "          eps=eps,\n",
+    "          mu_exp=mu_exp,\n",
+    "          init_s_sampler=init_s_sampler,\n",
+    "          mu_sample_size=mu_sample_size,\n",
+    "          precision=precision,\n",
+    "          mdp_solver=mdp_solver,\n",
+    "          use_slack=use_slack,\n",
+    "          slack_penalty=slack_penalty)\n",
+    "\n",
+    "results = bal.run(n_trial=n_trial, n_iteration=n_iteration)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
